rename to pokaplayer
Signed-off-by: gnehs <jayuiop@gmail.com>

--- a/PokaPlayer.xcodeproj/xcshareddata/xcschemes/PokaNative.xcscheme
+++ b/PokaPlayer.xcodeproj/xcshareddata/xcschemes/PokaNative.xcscheme
@@ -16,8 +16,8 @@
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "159673CA26DB1FBE00621279"
                BuildableName = "PokaNative.app"
-               BlueprintName = "PokaNative"
-               ReferencedContainer = "container:PokaNative.xcodeproj">
+               BlueprintName = "PokaPlayer"
+               ReferencedContainer = "container:PokaPlayer.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -46,8 +46,8 @@
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "159673CA26DB1FBE00621279"
             BuildableName = "PokaNative.app"
-            BlueprintName = "PokaNative"
-            ReferencedContainer = "container:PokaNative.xcodeproj">
+            BlueprintName = "PokaPlayer"
+            ReferencedContainer = "container:PokaPlayer.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -63,8 +63,8 @@
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "159673CA26DB1FBE00621279"
             BuildableName = "PokaNative.app"
-            BlueprintName = "PokaNative"
-            ReferencedContainer = "container:PokaNative.xcodeproj">
+            BlueprintName = "PokaPlayer"
+            ReferencedContainer = "container:PokaPlayer.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
